# branch_predictor

./: CMakeLists.txt  README.md
include/: OneBitPredictor.h  branch_predictor.h  static_bp.h  trace_reader.h
src/: OneBitPredictor.cpp  main.cpp  static_predictor.cpp  trace_reader.cpp
traces/: t_trace.trace  trace_gen.py
